- IR Report importing implemented - Added Student ID to section view - Still need to implement quiz importing - Still need to implement only importing one grade for IR report

--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -26,7 +26,7 @@
         <td><%= section.semester %></td>
         <td><%= section.year_offered %></td>
         <td><%= section.section %></td>
-        <td><%= section.student %></td>
+        <td><%= section.student.w_number %></td>
         <td><%= section.academic_progress %></td>
         <td><%= section.grade %></td>
         <td><%= section.quiz_score %></td>
