links are working except querry

--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -1,3 +1,4 @@
+<div id="marilyn">
 <h1>Search Database Test</h1>
 
 
@@ -50,6 +51,6 @@
    <%= submit_tag 'Submit' %>
  </p>
 <% end %>
-
+</div>
 
 
