--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -4,7 +4,7 @@
 
 	<head>
 		<title>WSU ABET Assessment Database Tool</title>
-		<link rel="stylesheet" href="C:\Users\FNU\Desktop\New folder\app\assets\stylesheets.dqt.css">
+		<link rel="stylesheet" href="/stylesheets">
 		<style>
 		    body {
 			       background-image: url(https://cse.wright.edu/sites/default/files/Russ.jpg);
@@ -26,9 +26,9 @@
 		</div>
 		<h3>
 		<a id="banner_link" href="index.html"><strong>Home page</strong></a>
-			<a id="banner_link" href="../app/views/importing/index.html.erb"><strong>Upload Results</strong></a>
-  			<a id="banner_link" href="../app/views/results/index.html.erb"><strong>Generate Report</strong></a>
-  			<a id="banner_link" href="../app/views/results/index.html.erb"><strong>Dynamic Query</strong></a>
+			<a id="banner_link" href="/importing"><strong>Upload Results</strong></a>
+  			<a id="banner_link" href="results"><strong>Generate Report</strong></a>
+  			<a id="banner_link" href="/query"><strong>Dynamic Query</strong></a>
          </h3>
 		<!-- System Description & Overview -->
 		<div id="description">
