Query System Minor Update
Some minor changes to the query system. This marks the completion for all
components of basic/simple dynamic querying.
  - Updated so that queries can be run on all domains that are associated
  with the Student table.
  - Query may also be run on all ranges that are associated with the
    Student table. (Note: this has not been tested thoroughly yet.)
  - More test queries have been added.

--- a/app/views/query/results.html.erb
+++ b/app/views/query/results.html.erb
@@ -1,6 +1,6 @@
 <h1>Query Results</h1>
 
-<p><%= @rattribute %> of students with (
+<p><%= @rattribute %> of students with <%= @subdomain %> (
 	<% @dattributes.zip(@dconditions).each do | dattr, dcond | %>
 		<%= dattr %> <%= dcond %>
 	<% end %>
