--- a/app/views/query/index.html.erb
+++ b/app/views/query/index.html.erb
@@ -8,4 +8,5 @@
 	<li>range: The range in which the results will be searched upon. <strong>REQUIRED</strong></li>
 	<li>rattribute: The specific attribute in which the results will be focused on. <strong>REQUIRED</strong></li>
 	<li>rcondition: An array of condiitions to apply to the rattributes. Each rattribute should have a corresponding rcondition. <strong>REQUIRED</strong></li>
+	<li>literal: A boolean value. If this is set to true, the dattributes with their dconditions will be linked by SQL conjunctions/disjunctions. Therefore you must include these in the conditions if you want to use literal!
 </ul>
