--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -9,9 +9,7 @@
 		    body {
 			       background-image: url(https://cse.wright.edu/sites/default/files/Russ.jpg);
 			}
-			h3{
-			       background-color: green;
-			}
+			
 		</style>
 	</head>
 
@@ -19,16 +17,16 @@
 
 		<!-- Banner Image & Navigation-->
 		<div id="banner">
-			<span title="return to home page"><a href="http://cecs.wright.edu/"><img src="http://cecs.wright.edu/sites/all/themes/cecs/img/logo3.png"/></a></span>
+			<span title="return to Wright State College of Computer Science and Engineering"><a href="http://cecs.wright.edu/"><img src="http://cecs.wright.edu/sites/all/themes/cecs/img/logo3.png"/></a></span>
 			 
 			<br>
 			
 		</div>
-		<h3>
-		<a id="banner_link" href="index.html"><strong>Home page</strong></a>
-			<a id="banner_link" href="/importing"><strong>Upload Results</strong></a>
-  			<a id="banner_link" href="results"><strong>Generate Report</strong></a>
-  			<a id="banner_link" href="/query"><strong>Dynamic Query</strong></a>
+	 <h3>	
+		<a href="/"><strong><button>Home page</button></strong></a>
+		<a href="/importing"><strong><button>Upload Results</button></strong></a>
+  		<a href="/results"><strong><button>Generate Report</button></strong></a>
+  		<a href="/query"><strong><button>Dynamic Query</button></strong></a>
          </h3>
 		<!-- System Description & Overview -->
 		<div id="description">
