--- a/app/views/importing/index.html.erb
+++ b/app/views/importing/index.html.erb
@@ -1,5 +1,27 @@
-<div id="marilyn">
+<style>
+body {
+			       background-image: url(https://cse.wright.edu/sites/default/files/Russ.jpg);
+			}
+</style>
+<body>
 
+<div id="banner">
+			<span title="return to Wright State College of Computer Science and Engineering"><a href="http://cecs.wright.edu/"><img src="http://cecs.wright.edu/sites/all/themes/cecs/img/logo3.png"/></a></span>
+			 
+			<br>
+			
+		</div>
+		<br>
+	<div id="ba2">	
+	 <h3>	
+		<a href="/"><strong><button>Home page</button></strong></a>
+		<a href="/importing"><strong><button>Upload Results</button></strong></a>
+  		<a href="/results"><strong><button>Generate Report</button></strong></a>
+  		<a href="/query"><strong><button>Dynamic Query</button></strong></a>
+         </h3>
+	</div>
+	<br>
+    <div id="marilyn2">
 <h1>Upload Quiz Results</h1>
 
 
@@ -74,3 +96,4 @@
   <%= submit_tag "Load IR report" %>
 <% end %>
 </div>
+</body>
