Revert "I have made some more changes I could make."
This reverts commit ebc7fc2239252c80a39eb2068e584f165829d610.

--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -1,27 +1,4 @@
-<style>
-body {
-			       background-image: url(https://cse.wright.edu/sites/default/files/Russ.jpg);
-			}
-</style>
-<body>
-
-<div id="banner">
-			<span title="return to Wright State College of Computer Science and Engineering"><a href="http://cecs.wright.edu/"><img src="http://cecs.wright.edu/sites/all/themes/cecs/img/logo3.png"/></a></span>
-			 
-			<br>
-			
-		</div>
-		<br>
-	<div id="ba2">	
-	 <h3>	
-		<a href="/"><strong><button>Home page</button></strong></a>
-		<a href="/importing"><strong><button>Upload Results</button></strong></a>
-  		<a href="/results"><strong><button>Generate Report</button></strong></a>
-  		<a href="/query"><strong><button>Dynamic Query</button></strong></a>
-         </h3>
-	</div>
-	<br>
-    <div id="marilyn2">
+<div id="marilyn">
 <h1>Search Database Test</h1>
 
 
@@ -75,7 +52,5 @@ body {
  </p>
 <% end %>
 </div>
-</div>
-</body>
 
 
