--- a/app/views/query/index.html.erb
+++ b/app/views/query/index.html.erb
@@ -3,6 +3,7 @@
 <p>Use "query/results" to query.</p>
 <p>URL params:</p>
 <ul>
+	<li>subdomain: The domain table to query against in conjunction with the student table.</li>
 	<li>dattribute: An array of attributes to condition on within the domain.</li>
 	<li>dcondition: An array of conditions to apply to the dattributes. Each dattribute should have a corresponding dcondition.</li>
 	<li>range: The range in which the results will be searched upon. <strong>REQUIRED</strong></li>
