--- a/app/views/prerequisites/index.html.erb
+++ b/app/views/prerequisites/index.html.erb
@@ -17,7 +17,7 @@
     <% @prerequisites.each do |prerequisite| %>
       <tr>
         <td><%= prerequisite.section.section %></td>
-        <td><%= prerequisite.student.w_id %></td>
+        <td><%= prerequisite.student.w_number %></td>
         <td><%= prerequisite.course %></td>
         <td><%= prerequisite.year_taken %></td>
         <td><%= prerequisite.faculty %></td>
