Advanced Querying Complete
Updated the query system so that more advanced dynamic queries can be
made.
- Allows for domain comparison groups, as described by the user.
- Enhanced the system to work with POST requests. Note that to do advanced
  queries, the request must be POST.
- Has been tested internally.
- Fixed display of data on slo_covered_by_kts view.

This should wrap up the backend for the query system.
NOTE: Dynamic queries that involve any tables that are not directly
related to the Student table will not work. Due to the design of the
database, these queries cannot be handled dynamically!

--- a/app/views/slo_covered_by_kts/index.html.erb
+++ b/app/views/slo_covered_by_kts/index.html.erb
@@ -12,8 +12,8 @@
   <tbody>
     <% @slo_covered_by_kts.each do |slo_covered_by_kt| %>
       <tr>
-        <td><%= slo_covered_by_kt.student_learning_outcome %></td>
-        <td><%= slo_covered_by_kt.knowledge_topic %></td>
+        <td><%= slo_covered_by_kt.student_learning_outcome.title %></td>
+        <td><%= slo_covered_by_kt.knowledge_topic.knowledge_topic %></td>
         <td><%= link_to 'Show', slo_covered_by_kt %></td>
         <td><%= link_to 'Edit', edit_slo_covered_by_kt_path(slo_covered_by_kt) %></td>
         <td><%= link_to 'Destroy', slo_covered_by_kt, method: :delete, data: { confirm: 'Are you sure?' } %></td>
