--- a/app/views/query/search.html.erb
+++ b/app/views/query/search.html.erb
@@ -1,7 +1,8 @@
 <h1>Query Results</h1>
 
-<p>Eventually we'll have a beautiful chart here...</p>
+<%= raw @visualization %>
 
+<br>
 <table>
   <tbody>
 	<% @counts.zip(@groups).each do | item, group | %>
