--- a/app/views/query/index.html.erb
+++ b/app/views/query/index.html.erb
@@ -2,6 +2,7 @@
 
 <p>URL params:</p>
 <ul>
+	<li>group: An array of comparison groups, each with a subdomain, a number of dattributes, and a number of corresponding dconditions for those dattributes.</li>
 	<li>subdomain: The domain table to query against in conjunction with the student table.</li>
 	<li>dattribute: An array of attributes to condition on within the domain.</li>
 	<li>dcondition: An array of conditions to apply to the dattributes. Each dattribute should have a corresponding dcondition.</li>
