new data button, baseline for the query page updated.

--- a/app/views/importing/index.html.erb
+++ b/app/views/importing/index.html.erb
@@ -13,13 +13,36 @@ body {
 		</div>
 		<br>
 	<div id="ba2">	
-	 <h3>	
-		<a href="/"><strong><button>Home page</button></strong></a>
-		<a href="/importing"><strong><button>Upload Results</button></strong></a>
-  		<a href="/results"><strong><button>Generate Report</button></strong></a>
-  		<a href="/query"><strong><button>Dynamic Query</button></strong></a>
+		 <h3>	
+		
+		<a class="myButton" href="/"><strong>Home page</strong></a>
+		<a class="myButton" href="/importing"><strong>Upload Results</strong></a>
+  		<a class="myButton" href="/results"><strong>Generate Report</strong></a>
+  		<a class="myButton" href="/query"><strong>Dynamic Query</strong></a>
+		<div class="dropdown">
+
+    <!-- trigger button -->
+    <button>Data</button>
+
+    <!-- dropdown menu -->
+    <ul class="dropdown-menu">
+        <li><a href="/sections">Sections</a></li>
+        <li><a href="/class_sections">Class Sections</a></li>
+        <li><a href="/answers">Answers</a></li>
+		<li><a href="/slo_covered_by_kts">SLO covered by KTS</a></li>
+		<li><a href="/fulfills">Fulfills</a></li>
+		<li><a href="/program_of_studies">Program of Studies</a></li>
+		<li><a href="/students">Students</a></li>
+		<li><a href="/questions">Questions</a></li>
+		<li><a href="/student_learning_outcomes">Students Learning Outcomes</a></li>
+		<li><a href="/">Program Educational Objectives</a></li>
+		<li><a href="/knowlwedge_topics">Knowledge Topics</a></li>
+		<li><a href="/prerequisites">Prerequisites</a></li>
+    </ul>
+</div>
+
          </h3>
-	</div>
+		 </div>
 	<br>
     <div id="marilyn2">
 <h1>Upload Quiz Results</h1>
