--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -1,4 +1,50 @@
-<div id="marilyn">
+<style>
+body {
+			       background-image: url(https://cse.wright.edu/sites/default/files/Russ.jpg);
+			}
+</style>
+<body>
+
+<div id="banner">
+			<span title="return to Wright State College of Computer Science and Engineering"><a href="http://cecs.wright.edu/"><img src="http://cecs.wright.edu/sites/all/themes/cecs/img/logo3.png"/></a></span>
+			 
+			<br>
+			
+		</div>
+		<br>
+	<div id="ba2">	
+	 	 <h3>	
+		
+		<a class="myButton" href="/"><strong>Home page</strong></a>
+		<a class="myButton" href="/importing"><strong>Upload Results</strong></a>
+  		<a class="myButton" href="/results"><strong>Generate Report</strong></a>
+  		<a class="myButton" href="/query"><strong>Dynamic Query</strong></a>
+		<div class="dropdown">
+
+    <!-- trigger button -->
+    <button>Data</button>
+
+    <!-- dropdown menu -->
+    <ul class="dropdown-menu">
+        <li><a href="/sections">Sections</a></li>
+        <li><a href="/class_sections">Class Sections</a></li>
+        <li><a href="/answers">Answers</a></li>
+		<li><a href="/slo_covered_by_kts">SLO covered by KTS</a></li>
+		<li><a href="/fulfills">Fulfills</a></li>
+		<li><a href="/program_of_studies">Program of Studies</a></li>
+		<li><a href="/students">Students</a></li>
+		<li><a href="/questions">Questions</a></li>
+		<li><a href="/student_learning_outcomes">Students Learning Outcomes</a></li>
+		<li><a href="/">Program Educational Objectives</a></li>
+		<li><a href="/knowlwedge_topics">Knowledge Topics</a></li>
+		<li><a href="/prerequisites">Prerequisites</a></li>
+    </ul>
+</div>
+
+         </h3>
+		 </div>
+	<br>
+    <div id="marilyn2">
 <h1>Search Database Test</h1>
 
 
@@ -52,5 +98,5 @@
  </p>
 <% end %>
 </div>
-
-
+</div>
+</body>
